[gd_scene load_steps=9 format=3 uid="uid://dp6k3cjuv8g5e"]

[ext_resource type="Script" uid="uid://byie0qx8e5vvc" path="res://ScenesScripts/Menus/MainMenu.gd" id="6"]

[sub_resource type="Sky" id="1"]
radiance_size = 0

[sub_resource type="Environment" id="2"]
background_mode = 2
sky = SubResource("1")
tonemap_mode = 3
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/5 = 0.0
glow_intensity = 1.0
glow_strength = 1.1
glow_blend_mode = 0

[sub_resource type="Animation" id="3"]
resource_name = "Background_Animation"
length = 9.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main_Menu_Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(40, 40, 40), Vector3(80, 80, 80), Vector3(120, 120, 120), Vector3(160, 160, 160), Vector3(200, 200, 200), Vector3(240, 240, 240), Vector3(280, 280, 280), Vector3(320, 320, 320), Vector3(360, 360, 360)]
}

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.199219, 0.199219, 0.199219, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0535583, 0.064363, 0.152344, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontFile" id="5"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Resource" id="Resource_2twon"]
metadata/__load_path__ = "res://assets/Space_Level_Objects/SpaceThumbnail.png"

[sub_resource type="Resource" id="Resource_f45t3"]
metadata/__load_path__ = "res://assets/Ruin_Level_Objects/RuinsThumbnail.png"

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="Background_Animation" type="Node3D" parent="."]

[node name="World_Environment" type="WorldEnvironment" parent="Background_Animation"]
environment = SubResource("2")

[node name="Main_Menu_Camera" type="Camera3D" parent="Background_Animation"]
transform = Transform3D(1, -1.74846e-07, 1.74846e-07, 1.74846e-07, 1, -1.74846e-07, -1.74846e-07, 1.74846e-07, 1, 0, 0, 0)

[node name="Animation_Player" type="AnimationPlayer" parent="Background_Animation"]
autoplay = "Background_Animation"
playback_speed = 0.18
anims/Background_Animation = SubResource("3")

[node name="Start_Menu" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.901961)
offset_right = 330.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("4")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title_Label" type="Label" parent="Start_Menu"]
offset_left = 20.0
offset_top = 10.0
offset_right = 227.0
offset_bottom = 77.0
scale = Vector2(1.4, 1.4)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("5")
text = "Godot 3
FPS Tutorial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Start" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -250.0
offset_right = 155.0
offset_bottom = -200.0
theme_override_fonts/font = SubResource("5")
text = "Start game"

[node name="Button_Open_Godot" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -190.0
offset_right = 155.0
offset_bottom = -140.0
theme_override_fonts/font = SubResource("5")
text = "Open Godot website"

[node name="Button_Options" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -130.0
offset_right = 155.0
offset_bottom = -80.0
theme_override_fonts/font = SubResource("5")
text = "Options"

[node name="Button_Quit" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -70.0
offset_right = 155.0
offset_bottom = -20.0
theme_override_fonts/font = SubResource("5")
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_Select_Menu" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.901961)
offset_right = 330.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("4")

[node name="Title_Label" type="Label" parent="Level_Select_Menu"]
offset_left = 20.0
offset_top = 10.0
offset_right = 227.0
offset_bottom = 77.0
scale = Vector2(1.4, 1.4)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("5")
text = "Select a level"
align = 1
valign = 1

[node name="Button_Back" type="Button" parent="Level_Select_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -70.0
offset_right = 155.0
offset_bottom = -20.0
theme_override_fonts/font = SubResource("5")
text = "Back"

[node name="Button_Level_Testing_Area" type="Button" parent="Level_Select_Menu"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 113.0
offset_right = 70.0
offset_bottom = 253.0

[node name="Icon" type="TextureRect" parent="Level_Select_Menu/Button_Level_Testing_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
expand = true

[node name="Button_Level_Space" type="Button" parent="Level_Select_Menu"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 275.0
offset_right = 70.0
offset_bottom = 415.0

[node name="Icon" type="TextureRect" parent="Level_Select_Menu/Button_Level_Space"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
texture = SubResource("Resource_2twon")
expand = true

[node name="Button_Level_Ruins" type="Button" parent="Level_Select_Menu"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 433.0
offset_right = 70.0
offset_bottom = 573.0

[node name="Icon" type="TextureRect" parent="Level_Select_Menu/Button_Level_Ruins"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
texture = SubResource("Resource_f45t3")
expand = true

[node name="Options_Menu" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.901961)
offset_right = 330.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("4")

[node name="Title_Label" type="Label" parent="Options_Menu"]
offset_left = 20.0
offset_top = 10.0
offset_right = 227.0
offset_bottom = 53.0
scale = Vector2(1.4, 1.4)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource("5")
text = "Options"
align = 1
valign = 1

[node name="Label_Mouse_Sensitivity" type="Label" parent="Options_Menu"]
offset_top = 120.0
offset_right = 330.0
offset_bottom = 152.0
theme_override_fonts/font = SubResource("5")
text = "Mouse sensitivity"
align = 1
valign = 1

[node name="HSlider_Mouse_Sensitivity" type="HSlider" parent="Options_Menu"]
offset_left = 10.0
offset_top = 160.0
offset_right = 320.0
offset_bottom = 176.0
min_value = 0.001
max_value = 0.4
step = 0.004
value = 0.012

[node name="Label_Joypad_Sensitivity" type="Label" parent="Options_Menu"]
offset_top = 190.0
offset_right = 330.0
offset_bottom = 222.0
theme_override_fonts/font = SubResource("5")
text = "Joypad sensitivity"
align = 1
valign = 1

[node name="HSlider_Joypad_Sensitivity" type="HSlider" parent="Options_Menu"]
offset_left = 10.0
offset_top = 230.0
offset_right = 320.0
offset_bottom = 246.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 0.1

[node name="Check_Button_VSync" type="CheckButton" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -450.0
offset_right = 135.0
offset_bottom = -410.0
theme_override_fonts/font = SubResource("5")
pressed = true
text = "V-Sync"

[node name="Button_Fullscreen" type="Button" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -400.0
offset_right = 135.0
offset_bottom = -350.0
theme_override_fonts/font = SubResource("5")
text = "Fullscreen"

[node name="Check_Button_Debug" type="CheckButton" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -150.0
offset_right = 155.0
offset_bottom = -110.0
theme_override_fonts/font = SubResource("5")
text = "Debug display"

[node name="Button_Back" type="Button" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -70.0
offset_right = 155.0
offset_bottom = -20.0
theme_override_fonts/font = SubResource("5")
text = "Back"
